--- a/tillEstrid/assets/css/start.css
+++ b/tillEstrid/assets/css/start.css
@@ -127,7 +127,7 @@ nav ul li a {
 	background-color: #D0CFCF;
 	width: 100%;
 	color: white;
-	padding-left:45%;
+	padding-left:300px;
 }
 footer {
 	width: 71%;
